# ml_frost_prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  database.yaml
configs/model/: ensemble.yaml  lgbm_config.yaml  rf_config.yaml  xgb_config.yaml
data/: README.md  connection.py
notebooks/: 01_missing_values_analysis.ipynb  02_outliers_analysis.ipynb  03_scaling_analysis.ipynb  EDA.ipynb  README.md  model_prototype.ipynb
scripts/: README.md  fetch_short_term_weather.py  generate_sample_data.py
src/ml_project/: README.md
src/ml_project/data/: README.md  connection.py  dataset.py  preprocessing.py
src/ml_project/models/: README.md  base_model.py  ensemble.py  predictor.py  trainer.py
src/ml_project/models/estimators/: lgbm_model.py  rf_model.py  xgb_model.py
src/ml_project/utils/: config.py  logger.py
tests/: README.md
tests/test_data/: test_connection.py  test_preprocessor.py
tests/test_models/: test_ensemble.py  test_lgbm_model.py  test_rf_model.py  test_xgb_model.py
tests/test_utils/: test_logger.py
